@@ -107,6 +107,7 @@
 #include "ccxResultPlotJobFrdCommand.hpp"
 #include "ccxResultPlotJobDatCommand.hpp"
 #include "ccxResultCSVJobFrdCommand.hpp"
+#include "ccxResultCSVJobDatCommand.hpp"
 #include "ccxResultProjectJobCommand.hpp"
 #include "ccxKillJobCommand.hpp"
 #include "ccxCustomLineCreateCommand.hpp"
@@ -235,6 +236,7 @@ std::vector<std::string> CalculiXPlugin::get_keys()
   keys.push_back("ccxResultPlotJobFrdCommand");
   keys.push_back("ccxResultPlotJobDatCommand");
   keys.push_back("ccxResultCSVJobFrdCommand");
+  keys.push_back("ccxResultCSVJobDatCommand");
   keys.push_back("ccxResultProjectJobCommand");
   keys.push_back("ccxCustomLineCreateCommand");
   keys.push_back("ccxCustomLineModifyCommand");
@@ -568,6 +570,9 @@ CubitCommand* CalculiXPlugin::create_command(const std::string &key)
 
   else if(key == "ccxResultCSVJobFrdCommand")
     return new ccxResultCSVJobFrdCommand();
+
+  else if(key == "ccxResultCSVJobDatCommand")
+    return new ccxResultCSVJobDatCommand();
 
   else if(key == "ccxKillJobCommand")
     return new ccxKillJobCommand();
